@@ -1,6 +1,5 @@
 package net.minecraft.world.entity.ai.sensing;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.server.level.ServerLevel;
@@ -13,23 +12,23 @@ public abstract class NearestVisibleLivingEntitySensor extends Sensor<LivingEnti
       super();
    }
 
-   protected abstract boolean isMatchingEntity(ServerLevel var1, LivingEntity var2, LivingEntity var3);
+   protected abstract boolean isMatchingEntity(final ServerLevel level, LivingEntity body, LivingEntity mob);
 
-   protected abstract MemoryModuleType<LivingEntity> getMemory();
+   protected abstract MemoryModuleType<LivingEntity> getMemoryToSet();
 
    public Set<MemoryModuleType<?>> requires() {
-      return ImmutableSet.of(this.getMemory());
+      return Set.of(this.getMemoryToSet(), MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
    }
 
-   protected void doTick(ServerLevel var1, LivingEntity var2) {
-      var2.getBrain().setMemory(this.getMemory(), this.getNearestEntity(var1, var2));
+   protected void doTick(final ServerLevel level, final LivingEntity body) {
+      body.getBrain().setMemory(this.getMemoryToSet(), this.getNearestEntity(level, body));
    }
 
-   private Optional<LivingEntity> getNearestEntity(ServerLevel var1, LivingEntity var2) {
-      return this.getVisibleEntities(var2).flatMap((var3) -> var3.findClosest((var3x) -> this.isMatchingEntity(var1, var2, var3x)));
+   private Optional<LivingEntity> getNearestEntity(final ServerLevel level, final LivingEntity body) {
+      return this.getVisibleEntities(body).flatMap((livingEntities) -> livingEntities.findClosest((mob) -> this.isMatchingEntity(level, body, mob)));
    }
 
-   protected Optional<NearestVisibleLivingEntities> getVisibleEntities(LivingEntity var1) {
-      return var1.getBrain().<NearestVisibleLivingEntities>getMemory(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
+   protected Optional<NearestVisibleLivingEntities> getVisibleEntities(final LivingEntity body) {
+      return body.getBrain().<NearestVisibleLivingEntities>getMemory(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
    }
 }
