@@ -1,11 +1,13 @@
 package net.minecraft.world.entity.animal.frog;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Dynamic;
+import java.util.List;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.syncher.EntityDataAccessor;
+import net.minecraft.network.syncher.EntityDataSerializers;
+import net.minecraft.network.syncher.SynchedEntityData;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
@@ -25,10 +27,8 @@ import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.ai.control.SmoothSwimmingLookControl;
 import net.minecraft.world.entity.ai.control.SmoothSwimmingMoveControl;
-import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.ai.navigation.PathNavigation;
 import net.minecraft.world.entity.ai.navigation.WaterBoundPathNavigation;
-import net.minecraft.world.entity.ai.sensing.Sensor;
 import net.minecraft.world.entity.ai.sensing.SensorType;
 import net.minecraft.world.entity.animal.Animal;
 import net.minecraft.world.entity.animal.Bucketable;
@@ -44,30 +44,27 @@ import org.jspecify.annotations.Nullable;
 
 public class Tadpole extends AbstractFish {
    private static final int DEFAULT_AGE = 0;
+   private static final EntityDataAccessor<Boolean> AGE_LOCKED;
    @VisibleForTesting
-   public static int ticksToBeFrog = Math.abs(-24000);
+   public static int ticksToBeFrog;
    public static final float HITBOX_WIDTH = 0.4F;
    public static final float HITBOX_HEIGHT = 0.3F;
    private int age = 0;
-   protected static final ImmutableList<SensorType<? extends Sensor<? super Tadpole>>> SENSOR_TYPES;
-   protected static final ImmutableList<MemoryModuleType<?>> MEMORY_TYPES;
+   protected int ageLockParticleTimer = 0;
+   private static final Brain.Provider<Tadpole> BRAIN_PROVIDER;
 
-   public Tadpole(EntityType<? extends AbstractFish> var1, Level var2) {
-      super(var1, var2);
+   public Tadpole(final EntityType<? extends AbstractFish> type, final Level level) {
+      super(type, level);
       this.moveControl = new SmoothSwimmingMoveControl(this, 85, 10, 0.02F, 0.1F, true);
       this.lookControl = new SmoothSwimmingLookControl(this, 10);
    }
 
-   protected PathNavigation createNavigation(Level var1) {
-      return new WaterBoundPathNavigation(this, var1);
+   protected PathNavigation createNavigation(final Level level) {
+      return new WaterBoundPathNavigation(this, level);
    }
 
-   protected Brain.Provider<Tadpole> brainProvider() {
-      return Brain.<Tadpole>provider(MEMORY_TYPES, SENSOR_TYPES);
-   }
-
-   protected Brain<?> makeBrain(Dynamic<?> var1) {
-      return TadpoleAi.makeBrain(this.brainProvider().makeBrain(var1));
+   protected Brain<Tadpole> makeBrain(final Brain.Packed packedBrain) {
+      return BRAIN_PROVIDER.makeBrain(this, packedBrain);
    }
 
    public Brain<Tadpole> getBrain() {
@@ -78,15 +75,15 @@ public class Tadpole extends AbstractFish {
       return SoundEvents.TADPOLE_FLOP;
    }
 
-   protected void customServerAiStep(ServerLevel var1) {
-      ProfilerFiller var2 = Profiler.get();
-      var2.push("tadpoleBrain");
-      this.getBrain().tick(var1, this);
-      var2.pop();
-      var2.push("tadpoleActivityUpdate");
+   protected void customServerAiStep(final ServerLevel level) {
+      ProfilerFiller profiler = Profiler.get();
+      profiler.push("tadpoleBrain");
+      this.getBrain().tick(level, this);
+      profiler.pop();
+      profiler.push("tadpoleActivityUpdate");
       TadpoleAi.updateActivity(this);
-      var2.pop();
-      super.customServerAiStep(var1);
+      profiler.pop();
+      super.customServerAiStep(level);
    }
 
    public static AttributeSupplier.Builder createAttributes() {
@@ -95,27 +92,43 @@ public class Tadpole extends AbstractFish {
 
    public void aiStep() {
       super.aiStep();
-      if (!this.level().isClientSide()) {
+      if (!this.level().isClientSide() && !this.isAgeLocked()) {
          this.setAge(this.age + 1);
       }
 
+      this.ageLockParticleTimer = AgeableMob.makeAgeLockedParticle(this.level(), this, this.ageLockParticleTimer, this.isAgeLocked());
    }
 
-   protected void addAdditionalSaveData(ValueOutput var1) {
-      super.addAdditionalSaveData(var1);
-      var1.putInt("Age", this.age);
+   protected void addAdditionalSaveData(final ValueOutput output) {
+      super.addAdditionalSaveData(output);
+      output.putInt("Age", this.age);
+      output.putBoolean("AgeLocked", this.isAgeLocked());
    }
 
-   protected void readAdditionalSaveData(ValueInput var1) {
-      super.readAdditionalSaveData(var1);
-      this.setAge(var1.getIntOr("Age", 0));
+   protected void readAdditionalSaveData(final ValueInput input) {
+      super.readAdditionalSaveData(input);
+      this.setAge(input.getIntOr("Age", 0));
+      this.setAgeLocked(input.getBooleanOr("AgeLocked", false));
+   }
+
+   protected void defineSynchedData(final SynchedEntityData.Builder entityData) {
+      super.defineSynchedData(entityData);
+      entityData.define(AGE_LOCKED, false);
+   }
+
+   protected void setAgeLocked(final boolean locked) {
+      this.entityData.set(AGE_LOCKED, locked);
+   }
+
+   public boolean isAgeLocked() {
+      return (Boolean)this.entityData.get(AGE_LOCKED);
    }
 
    protected @Nullable SoundEvent getAmbientSound() {
       return null;
    }
 
-   protected @Nullable SoundEvent getHurtSound(DamageSource var1) {
+   protected @Nullable SoundEvent getHurtSound(final DamageSource source) {
       return SoundEvents.TADPOLE_HURT;
    }
 
@@ -123,31 +136,44 @@ public class Tadpole extends AbstractFish {
       return SoundEvents.TADPOLE_DEATH;
    }
 
-   public InteractionResult mobInteract(Player var1, InteractionHand var2) {
-      ItemStack var3 = var1.getItemInHand(var2);
-      if (this.isFood(var3)) {
-         this.feed(var1, var3);
+   public InteractionResult mobInteract(final Player player, final InteractionHand hand) {
+      ItemStack itemStack = player.getItemInHand(hand);
+      if (this.isFood(itemStack) && !this.isAgeLocked()) {
+         this.feed(player, itemStack);
+         return InteractionResult.SUCCESS;
+      } else if (AgeableMob.canUseGoldenDandelion(itemStack, true, this.ageLockParticleTimer, this)) {
+         AgeableMob.setAgeLocked(this, this::isAgeLocked, player, itemStack, (mob) -> this.setAgeLockedData());
          return InteractionResult.SUCCESS;
       } else {
-         return (InteractionResult)Bucketable.bucketMobPickup(var1, var2, this).orElse(super.mobInteract(var1, var2));
+         return (InteractionResult)Bucketable.bucketMobPickup(player, hand, this).orElse(super.mobInteract(player, hand));
       }
+   }
+
+   private void setAgeLockedData() {
+      this.setAgeLocked(!this.isAgeLocked());
+      this.setAge(0);
+      this.ageLockParticleTimer = 40;
    }
 
    public boolean fromBucket() {
       return true;
    }
 
-   public void setFromBucket(boolean var1) {
+   public void setFromBucket(final boolean fromBucket) {
    }
 
-   public void saveToBucketTag(ItemStack var1) {
-      Bucketable.saveDefaultDataToBucketTag(this, var1);
-      CustomData.update(DataComponents.BUCKET_ENTITY_DATA, var1, (var1x) -> var1x.putInt("Age", this.getAge()));
+   public void saveToBucketTag(final ItemStack bucket) {
+      Bucketable.saveDefaultDataToBucketTag(this, bucket);
+      CustomData.update(DataComponents.BUCKET_ENTITY_DATA, bucket, (tag) -> {
+         tag.putInt("Age", this.getAge());
+         tag.putBoolean("AgeLocked", this.isAgeLocked());
+      });
    }
 
-   public void loadFromBucketTag(CompoundTag var1) {
-      Bucketable.loadDefaultDataFromBucketTag(this, var1);
-      var1.getInt("Age").ifPresent(this::setAge);
+   public void loadFromBucketTag(final CompoundTag tag) {
+      Bucketable.loadDefaultDataFromBucketTag(this, tag);
+      tag.getInt("Age").ifPresent(this::setAge);
+      this.setAgeLocked(tag.getBooleanOr("AgeLocked", false));
    }
 
    public ItemStack getBucketItemStack() {
@@ -158,30 +184,30 @@ public class Tadpole extends AbstractFish {
       return SoundEvents.BUCKET_FILL_TADPOLE;
    }
 
-   private boolean isFood(ItemStack var1) {
-      return var1.is(ItemTags.FROG_FOOD);
+   private boolean isFood(final ItemStack itemStack) {
+      return itemStack.is(ItemTags.FROG_FOOD);
    }
 
-   private void feed(Player var1, ItemStack var2) {
-      this.usePlayerItem(var1, var2);
+   private void feed(final Player player, final ItemStack itemStack) {
+      this.usePlayerItem(player, itemStack);
       this.ageUp(AgeableMob.getSpeedUpSecondsWhenFeeding(this.getTicksLeftUntilAdult()));
       this.level().addParticle(ParticleTypes.HAPPY_VILLAGER, this.getRandomX(1.0), this.getRandomY() + 0.5, this.getRandomZ(1.0), 0.0, 0.0, 0.0);
    }
 
-   private void usePlayerItem(Player var1, ItemStack var2) {
-      var2.consume(1, var1);
+   private void usePlayerItem(final Player player, final ItemStack itemStack) {
+      itemStack.consume(1, player);
    }
 
    private int getAge() {
       return this.age;
    }
 
-   private void ageUp(int var1) {
-      this.setAge(this.age + var1 * 20);
+   private void ageUp(final int ticksToAgeUp) {
+      this.setAge(this.age + ticksToAgeUp * 20);
    }
 
-   private void setAge(int var1) {
-      this.age = var1;
+   private void setAge(final int newAge) {
+      this.age = newAge;
       if (this.age >= ticksToBeFrog) {
          this.ageUp();
       }
@@ -190,11 +216,11 @@ public class Tadpole extends AbstractFish {
 
    private void ageUp() {
       Level var2 = this.level();
-      if (var2 instanceof ServerLevel var1) {
-         this.convertTo(EntityType.FROG, ConversionParams.single(this, false, false), (var2x) -> {
-            var2x.finalizeSpawn(var1, var1.getCurrentDifficultyAt(var2x.blockPosition()), EntitySpawnReason.CONVERSION, (SpawnGroupData)null);
-            var2x.setPersistenceRequired();
-            var2x.fudgePositionAfterSizeChange(this.getDimensions(this.getPose()));
+      if (var2 instanceof ServerLevel serverLevel) {
+         this.convertTo(EntityType.FROG, ConversionParams.single(this, false, false), (frog) -> {
+            frog.finalizeSpawn(serverLevel, serverLevel.getCurrentDifficultyAt(frog.blockPosition()), EntitySpawnReason.CONVERSION, (SpawnGroupData)null);
+            frog.setPersistenceRequired();
+            frog.fudgePositionAfterSizeChange(this.getDimensions(this.getPose()));
             this.playSound(SoundEvents.TADPOLE_GROW_UP, 0.15F, 1.0F);
          });
       }
@@ -210,7 +236,8 @@ public class Tadpole extends AbstractFish {
    }
 
    static {
-      SENSOR_TYPES = ImmutableList.of(SensorType.NEAREST_LIVING_ENTITIES, SensorType.NEAREST_PLAYERS, SensorType.HURT_BY, SensorType.FROG_TEMPTATIONS);
-      MEMORY_TYPES = ImmutableList.of(MemoryModuleType.LOOK_TARGET, MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES, MemoryModuleType.WALK_TARGET, MemoryModuleType.CANT_REACH_WALK_TARGET_SINCE, MemoryModuleType.PATH, MemoryModuleType.NEAREST_VISIBLE_ADULT, MemoryModuleType.TEMPTATION_COOLDOWN_TICKS, MemoryModuleType.IS_TEMPTED, MemoryModuleType.TEMPTING_PLAYER, MemoryModuleType.BREED_TARGET, MemoryModuleType.IS_PANICKING);
+      AGE_LOCKED = SynchedEntityData.<Boolean>defineId(Tadpole.class, EntityDataSerializers.BOOLEAN);
+      ticksToBeFrog = Math.abs(-24000);
+      BRAIN_PROVIDER = Brain.<Tadpole>provider(List.of(SensorType.NEAREST_LIVING_ENTITIES, SensorType.NEAREST_PLAYERS, SensorType.HURT_BY, SensorType.FROG_TEMPTATIONS), (var0) -> TadpoleAi.getActivities());
    }
 }
